Bug 939942 - Reflow when bounds changes due to stroke creation/removal. r=jwatt, a=lsblakk