layout/svg/nsSVGTextFrame2.cpp
@@ -4962,11 +4962,10 @@ nsSVGTextFrame2::ShouldRenderAsPath(nsRenderingContext* aContext,
   }
 
   // Text has a stroke.
-  if (!(style->mStroke.mType == eStyleSVGPaintType_None ||
-        style->mStrokeOpacity == 0 ||
-        nsSVGUtils::CoordToFloat(PresContext(),
-                                 static_cast<nsSVGElement*>(mContent),
-                                 style->mStrokeWidth) == 0)) {
+  if (style->HasStroke() &&
+      nsSVGUtils::CoordToFloat(PresContext(),
+                               static_cast<nsSVGElement*>(mContent),
+                               style->mStrokeWidth) > 0) {
     return true;
   }
 
